image_for_result_server/resultserver-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resultserver
  labels:
    app: resultserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver
  template:
    metadata:
      labels:
        app: resultserver
    spec:
      containers:
      - name: resultserver
        image: momina111/resultsapp:1.0
        ports:
        - containerPort: 80
        resources: {}
