image_for_result_server/resultserver-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: resultserver-svc
  labels:
    app: resultserver
spec:
  type: NodePort
  selector:
    app: resultserver
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
      protocol: TCP
